Added backend folder with server and API

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,5 +10,11 @@
   },
   "files.associations": {
     "*.css": "tailwindcss"
+  },
+  "files.exclude": {
+    "**/.git": false
+  },
+  "editor.codeActionsOnSave": {
+    
   }
 }
